[metadata]
name = cotation_crypto
description = A simple flask app to display a market cotation
author = Philippe Acquier
license = MIT
license_file = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    flask_app
install_requires =
    flask >= 3.0
    yfinance >= 0.2
    lxml >= 5
    html5lib >= 1
python_requires = >=3.10
package_dir =
    =src

[options.extras_require]
testing =
    pytest>=6.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
app = py.typed

[flake8]
max-line-length = 160